<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="hello_blank_fragment_home">Hello blank fragment home</string>
    <string name="app_name">百家姓氏</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_rbtn_trinidad_eye">填写资料</string>
    <string name="tab_rbtn_msg">消息</string>
    <string name="tab_rbtn_contact_list">通讯录</string>
    <string name="tab_rbtn_mine">我</string>
    <string name="video_select">视频选择</string>
    <string name="title_bar_txt_send_request">发起请求</string>
    <string name="title_bar_hint_search">输入关键字或昵称搜索</string>
    <string name="title_bar_txt_recorder_again">重拍</string>
    <string name="title_bar_txt_confirm">确定</string>
    <string name="content_tips">请填写内容</string>
    <string name="Please_enter_report">请输入举报内容</string>
    <string name="mine_txt_login_reg">登录</string>
    <string name="mine_txt_review">评价</string>
    <string name="mine_txt_img_text_aty_prize">分享有奖</string>
    <string name="discover_txt_prize">推荐有奖</string>
    <string name="mine_txt_img_text_aty_msg">消息</string>
    <string name="mine_txt_img_text_aty_notic">通知</string>
    <string name="mine_txt_img_text_aty_direct__msg">私信</string>
    <string name="mine_txt_img_text_aty_address_list">通讯录</string>
    <string name="mine_txt_wallet">账单明细</string>
    <string name="mine_txt_setting">设置</string>
    <string name="mine_txt_agree">•开通即视为同意</string>
    <string name="phone_tv">手机验证登录</string>
    <string name="wx_tv">微信授权登录</string>
    <string name="login_tips">遇到问题？</string>
    <string name="phone_login_title">验证手机号</string>
    <string name="phone_login_phone_hint">请输入手机号</string>
    <string name="login_hint_pwd">请输入密码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_btn_logout">退出</string>
    <string name="login_text_reg">注册账号</string>
    <string name="login_text_forget_pwd">忘记密码</string>
    <string name="reg_text_commonly_phone">请输入常用手机号码</string>
    <string name="reg_hint_phone">请输入手机号码</string>
    <string name="reg_hint_ver">请输入验证码</string>
    <string name="reg_btn_next">下一步</string>
    <string name="reg_btn_redpackage">发红包</string>
    <string name="reg_btn_go">继续</string>
    <string name="reg_hint_verify_code">请输入验证码</string>
    <string name="reg_text_verify_code_time">获取验证码</string>
    <string name="reg_text_usage_agreement1">注册即代表您同意</string>
    <string name="reg_text_usage_agreement">
        <u>用户协议</u>
    </string>
    <string name="reg_text_usage_agreement2">
        <u>隐私政策</u>
    </string>
    <string name="reg_text_usage_agreement3">登录即代表您同意</string>
    <string name="reg_hint_login_pwd">请再次输入密码</string>
    <string name="reg_hint_login_new_pwd">请输入新的密码</string>
    <string name="reg_hint_login_new_pwd2">请再次输入新的密码</string>
    <string name="reg_rb_man">男</string>
    <string name="reg_rb_wonman">女</string>
    <string name="dialog_text_bank">解除绑定</string>
    <string name="dialog_text_cancel">取消</string>
    <string name="dialog_text_save">保存</string>
    <string name="text_save_failed">保存失败</string>
    <string name="text_save_suc">保存成功</string>
    <string name="reg_text_information">填写信息</string>
    <string name="reg_text_family_name">姓</string>
    <string name="reg_text_surname_name">名</string>
    <string name="reg_hint_select_family_name">必填项</string>
    <string name="reg_hint_select_surname_name">必填项</string>
    <string name="reg_text_birth">生日</string>
    <string name="referrer">推荐人</string>
    <string name="reg_hint_birth">请选择出生日期</string>
    <string name="reg_text_gender">性别</string>
    <string name="text_modify_old">输入原密码</string>
    <string name="text_modify_new">输入新密码</string>
    <string name="text_modify_new2">再次输入新密码</string>
    <string name="tex_about_notice">系统通知</string>
    <string name="tex_about_account">《用户协议》</string>
    <string name="tex_about_version">版本检测</string>
    <string name="tex_other_login">其他登录方式</string>
    <string name="tex_about_version2">（可更新至最新版本）</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing1">正在刷新&#8230;</string>
    <string name="refresh_success">刷新成功</string>
    <string name="refresh_null">没有更多数据了</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="pw_txt_cancel">取消</string>
    <string name="pw_txt_comment">评价</string>
    <string name="play_end_btn_txt">评价</string>
    <string name="submit_evaluate_txt">提交评价</string>
    <string name="whole_evaluate_txt">整体评价</string>
    <string name="good_evaluate_txt">好评</string>
    <string name="middle_evaluate_txt">中评</string>
    <string name="bad_evaluate_txt">差评</string>
    <string name="evaluate_detail_txt">评价详情（选填）</string>
    <string name="evaluate_detail_txt_label">您的评价对其他用户有很大帮助（请文明留言）</string>
    <string name="evaluate_upload_pic">上传照片（选填）</string>
    <string name="evaluate_anonymous_txt">匿名</string>
    <string name="evaluate_open_txt">公开</string>
    <string name="common_btn_txt">完成</string>
    <string name="careate_clan">建立宗亲会</string>
    <string name="toast_net_error_txt">网络连接异常，请检查网络设置</string>
    <string name="txt_get_service_failed">计费详情，点击查看</string>
    <string name="txt_comment_all">全部</string>
    <string name="txt_comment_good">好评</string>
    <string name="txt_comment_middle">中评</string>
    <string name="txt_comment_bad">差评</string>
    <string name="txt_no_more_data">没有更多数据了</string>
    <string name="txt_video_accept">接受</string>
    <string name="txt_video_refuse">拒绝</string>
    <string name="txt_video_refuse_online">撤下服务</string>
    <string name="txt_video_bottom_notify">请点击上方的“好评率”，留意对方的信誉(即评价记录及地理位置信息)</string>
    <string name="txt_good_evaluate_rate">好评率：</string>
    <string name="text_mine_person">登录 | 注册</string>
    <string name="text_mine_total_money">总金币</string>
    <string name="text_mine_money_lable">金币</string>
    <string name="text_mine_recharge_money">购买的金币</string>
    <string name="text_mine_recharge_lable">购买金币</string>
    <string name="text_mine_income">收益的金币</string>
    <string name="text_mine_account_detail">账单明细</string>
    <string name="txt_you_follow">您关注了</string>
    <string name="txt_follow_you">关注了您</string>
    <string name="text_mine_num">约见号</string>
    <string name="text_mine_me">我</string>
    <string name="text_login_and">和</string>
    <string name="text_login_zc">《隐私政策》</string>
    <string name="text_login_choose_type">选择登录方式</string>
    <string name="text_login_wx">微信</string>
    <string name="text_login_qq">QQ</string>
    <string name="text_login_weibo">微博</string>
    <string name="text_login_phone">手机号</string>
    <string name="text_setting_lable">设置</string>
    <string name="title_reg_money">购买金币</string>
    <string name="net_error_tips">网络异常,请检查网络.</string>
    <string name="toast_huanc">缓存已清空</string>
    <string name="text_person_man">男</string>
    <string name="text_person_woman">女</string>
    <string name="swipe_delete">删除</string>
    <string name="qq_friends">QQ好友</string>
    <string name="wx_friends">微信好友</string>
    <string name="qq_space">QQ空间</string>
    <string name="wx_space">微信朋友圈</string>
    <string name="sina_space">新浪微博</string>
    <string name="twitter_space">Twitter</string>
    <string name="facebook_space">Facebook</string>
    <string name="text_zfb">支付宝</string>
    <string name="text_wx">微信</string>
    <string name="toast_waz">未安装微信，请安装后再试</string>
    <string name="text_kfh_address">开户行地址</string>
    <string name="toast_xing_not_data">请输入您的“姓”</string>
    <string name="toast_name_not_data">请输入您的“名”</string>
    <string name="toast_sjh_not">手机号不能为空</string>
    <string name="toast_sjh_not2">手机号不正确</string>
    <string name="toast_not_check">未勾选协议</string>
    <string name="text_cxhq">重新获取</string>
    <string name="txt_sms">短信</string>
    <string name="txt_no_send_empty_msg">亲！不能发送空消息哦</string>
    <string name="txt_send_success">发送成功</string>
    <string name="txt_send_failed">发送失败</string>
    <string name="txt_feed_price">金币/分钟</string>
    <string name="image">图片</string>
    <string name="video">视频</string>
    <string name="txt_select_image">选择相册</string>
    <string name="txt_more_pics">最多只能选择9张图片</string>
    <string name="txt_pressed_exit">再按一次退出</string>
    <string name="txt_you_confirm_give_up">您确定放弃领取吗？</string>
    <string name="txt_sex_no_update">选择性别后将不能修改</string>
    <string name="txt_pic">[图片]</string>
    <string name="txt_video">[视频]</string>
    <string name="txt_video_chat">[视频聊天]</string>
    <string name="gift_pic">[礼物]</string>
    <string name="red_packet">[红包]</string>
    <string name="txt_audio">[语音消息]</string>
    <string name="txt_location">[位置]</string>
    <string name="txt_file">[文件]</string>
    <string name="txt_secret">[阅后即焚]</string>
    <string name="txt_notify">[通知]</string>
    <string name="txt_group_hint">[群提示]</string>
    <string name="txt_The_group_of">[邀请入群]</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="fragment_comments_detail_tips2">好评</string>
    <string name="fragment_comments_detail_tips3">中评</string>
    <string name="fragment_comments_detail_tips4">差评</string>
    <string name="activity_render_request_tips4">发送</string>
    <string name="hint_say_st">说点什么吧</string>
    <string name="hint_say_st_2">发布动态...</string>
    <string name="live_send_pay_tips">你向 %1$s 赠送了 %2$s金币)</string>
    <string name="live_receive_tips">向你赠送了 %1$s金币)</string>
    <string name="title_job">选择行业</string>
    <string name="oto_minute_ago">分钟前</string>
    <string name="oto_hour_ago">小时前</string>
    <string name="oto_yesterday">昨天</string>
    <string name="oto_the_day_before_yesterday">前天</string>
    <string name="oto_day_ago">天前</string>
    <string name="one_month_age">1个月前</string>
    <string name="two_month_age">2个月前</string>
    <string name="three_month_age">3个月前</string>
    <string name="txt_discover">发现</string>
    <string name="toast_video_tips">请文明视聊，发布谩骂、色情低俗、广告、政治敏感等内容及违禁品交易信息将会被封停账号。</string>
    <string name="surnames">姓氏</string>
    <string name="reach">  </string>
    <string name="Login_means_read_and_agree">阅读并同意</string>
    <string name="Binding_micro_letter">绑定微信</string>
    <string name="Binding_micro_letter2">更好保护账号安全</string>
    <string name="Binding_micro_letter4">暂不需要</string>
    <string name="Clan_background">宗亲会背景</string>
    <string name="Clan_name">宗亲会名称</string>
    <string name="Tong_he_tong">堂号</string>
    <string name="Tong_he_tong2">如：鲁堂号</string>
    <string name="date_of_establishment">成立时间</string>
    <string name="input_date_of_establishment">请输入成立时间</string>
    <string name="detailed_address">详细地址</string>
    <string name="Select_the_detailed_address">请选择详细地址</string>
    <string name="Binding_ancestral_shrine">绑定祖祠</string>
    <string name="Binding_ancestral_shrine2">未绑定</string>
    <string name="brief_introduction">简介</string>
    <string name="brief_introduction2">简单介绍下你的宗亲会吧</string>
    <string name="brief_introduction3">入会要求</string>
    <string name="brief_introduction4">请填写对入会成员的要求</string>
    <string name="Family_album">宗亲会相册</string>
    <string name="Family_album2">申请建立宗亲会</string>
    <string name="main_more_text">发表版块</string>
    <string name="main_more_text1">资讯</string>
    <string name="main_more_text2">姓氏起源</string>
    <string name="main_more_text3">名人录</string>
</resources>